# NeuroSim-Core-Dev

./: .gitignore  README.md  requirements.txt  run_demo.py  run_pytest.py  run_tests.py  setup.cfg  setup.py
notebooks/: 01_data_ingestion.ipynb  02_energy_calculation.ipynb  03_clinical_plotting.ipynb  04_full_pipeline_demo.ipynb
src/neurosim/: __init__.py
src/neurosim/connectivity/: __init__.py  granger.py  graphnet.py  solver.py  wilson_cowan.py
src/neurosim/control/: __init__.py  energy.py  gramian.py  gramian_schur.py  metrics.py
src/neurosim/harmonization/: __init__.py  combat.py
src/neurosim/ingestion/: __init__.py  bids_loader.py  parcellation.py  signal_cleaning.py
tests/: __init__.py  test_connectivity.py  test_control.py  test_frobenius_recovery.py  test_gramian_schur.py  test_granger.py  test_graphnet.py  test_harmonization.py  test_ingestion.py  test_wilson_cowan.py
