[metadata]
name = neurosim
version = 0.1.0-dev
author = Md. Shamsul Alam
author_email = shamsulalam1114@gmail.com
description = GSoC 2026 Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shamsulalam1114/NeuroSim-Core-Dev
project_urls =
    Bug Tracker = https://github.com/shamsulalam1114/NeuroSim-Core-Dev/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.23.0
    scipy>=1.9.0
    tqdm>=4.64.0
    scikit-learn>=1.1.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    black
    flake8
notebooks =
    jupyterlab>=3.4.0
    pandas>=1.5.0
    seaborn>=0.12.0
    matplotlib>=3.5.0

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/,build/,dist/
